Moved App component css to its own file; disabled window scrolling to prevent modal double scroll

--- a/src/index.css
+++ b/src/index.css
@@ -53,35 +53,3 @@ h4 {
   font-size: 200%;
   font-weight: 300;
 }
-
-.app-header,
-.app-footer {
-  background-color: #f0141e;
-  padding: 20px;
-  text-align: center;
-}
-
-main {
-  min-height: 100vh;
-  padding: 25px 0;
-}
-
-@media screen and (max-width: 450px) {
-  .app-header h1 {
-    font-size: 150%;
-  }
-
-  main {
-    padding: 0;
-  }
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
